packages/rspack/tests/configCases/errors/asset-module-build-failed/webpack.config.js
/**
 * @type {import('@rspack/core').RspackOptions}
 */
module.exports = {
	context: __dirname,
	module: {
		rules: [
			{
				test: "\\.svg$",
				uses: [
					{
						loader: "./my-loader.js",
            type: "asset"
					}
				]
			}
		]
	}
};
